# advanced_bag_recorder

./: .clang-format  CMakeLists.txt  package.xml
include/advanced_bag_recorder/: advanced_bag_recorder.h
launch/: advanced_bag_recorder.launch
params/: bag_recorder_params.yaml  log4cxx_config.cfg
src/: advanced_bag_recorder.cpp  advanced_bag_recorder_node.cpp
version/: version.md
